Remove secp256k1-node build script

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Secp256k1 test</title>
     <script src="./elliptic.min.js"></script>
-    <script src="../dist/browser-bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
   </head>
   <body>
     <script>
